assets/css/style.css
/* ... */
.footer_cart:not(:last-child) {
    margin-right: 11.4375rem;
}

.footer_cart h3 {
    font-weight: 500;
    font-size: .9375rem;
    line-height: 1.5rem;
    color: var(--white-color-third);
    margin-bottom: 1.5rem;
}

.footer_cart .links {
    display: flex;
    flex-direction: column;
    justify-content: left;
}

.footer_cart .links a {

    color: var(--gray-text-color-primary);
    font-weight: 500;
    font-size: .9375rem;
    line-height: 1.5rem;
    color: var(--footer-text-color);
    opacity: 80%;
}

.footer_cart .links a:not(:last-child) {
    margin-bottom: .75rem;
}



.mark {
    color: var(--gray-text-color-primary);
    text-align: center;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.5rem;
    color: var(--footer-text-color);
    padding-top: 2rem;
    border-top: .0625rem solid #2E3545;
    opacity: 90%;
}

/* end of footer */






/* responsive */

@media (max-width:1360px) {
    .containar {
        /* width: 90%; */
        margin: 0 50px auto;
    }

    .call h4 {
        width: 52%;
    }
}





@media (max-width:1285px) {
    .containar {
        /* width: 95%; */
        margin: 0 40px auto;
    }

    .hero_header h1 {
        width: 47%;
    }

    .call h4 {
        width: 55%;
    }

}

@media (max-width:1175px) {
    .hero_header h1 {
        width: 50%;
    }

    .call h4 {
        width: 68%;
    }

    .welcome_left h3 {
        width: 94%;
    }

    .welcome_right .input input {
        width: 20rem;
    }

    .blog_body_items .item {
        width: 29%;
    }

}

@media (max-width:1050px) {
    .hero_header h1 {
        width: 55%;
    }

    .call h4 {
        width: 70%;
    }

    .welcome_left h3 {
        width: 96%;
        font-size: 1.6875rem;
    }

    .welcome_right .input input {
        width: 19rem;
    }

    .blog_body_items .item {
        /* width: 29%; */
        aspect-ratio: 1/1;
    }
}

/* end of large screen width */

/* ================================================================= */

/* start of tablet width */

@media (max-width:1025px) {

    .navbar {
        padding: 1.25rem 0;
    }

    /**/

    .navbar_slid {
        display: flex;
    }

    .nav_test {
        display: none;
    }

    .navbar .row {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: space-between;
    }

    .containar {
        /* margin: 0 auto; */
        margin: 0 3.4375rem auto;
    }

    /**/

    .row {
        width: 100%;
        margin: 0 auto;
    }

    .navbar_logo {
        width: 8rem;
        margin-left: 0;
        margin-left: 0;
    }

    /**/

    .icon-menu {
        margin-right: 0;
        font-size: 1.5rem;
    }

    /**/

    /* end of navbar */

    .hero_header h1 {
        width: 75%;
    }

    /**/

    .hero_header h1 span {
        display: inline;
    }

    .hero_header {
        padding: 3rem 0 5.5rem 0;
    }

    /* end of hero */

    .welcome {
        display: none;
        padding: 2.5rem 0;
    }

    .tablet_apper {
        display: flex;
    }

    .welcome .row {
        flex-direction: column;
    }

    .welcome_left h3 {
        width: 100%;
        margin-bottom: 1rem
    }

    .welcome_left p {
        margin-bottom: 2rem;
    }

    .welcome_right .input input {
        width: 27.75rem;
    }

    /* end of welcom */

    .blog_top .row {
        flex-direction: column;
        padding: 3rem 0;
    }

    .blog_top_left {
        width: 100%;
        margin: 0 auto;
        margin-bottom: 1rem;
    }

    .blog_top_left img {
        object-fit: cover;
        width: 100%;
    }

    .blog_top_left h3 {
        margin-bottom: .75rem;
    }

    .cart img {
        object-fit: fill;
        width: 11.75rem;
        /* height: 10.375rem; */
        /* aspect-ratio: 1 / 1; */
    }

    .cart h3 {
        font-weight: 500;
        font-size: 1.375rem;
    }

    .cart .p_1st {
        display: none;
    }

    .cart .p_2nd {
        display: flex;
        width: 93%;
    }

    .cart .hidde {
        display: inline;
    }

    /* end blog top */

    .blog_body_header {
        margin: 3rem 0 2rem 0;
    }

    .blog_body_header h3::after {
        display: none;
    }

    .blog_body_items {
        margin-top: 0;
        margin-left: 0;
        margin-bottom: 0;
    }

    .blog_body_items .hidde {
        display: none;
    }

    .blog_body_items .item {
        width: 47%;
        margin: 0;
        margin-right: 2rem;
        margin-bottom: 3rem;
    }

    .blog_body_items .item:nth-child(even) {
        margin-right: 0;
    }

    .blog_body_items .item:nth-child(n+3) {
        margin-top: 3rem;
    }

    .blog_body_items .item .text_1st {
        display: none;
    }

    .blog_body_items .item .text_2nd {
        display: flex;
        width: 80%;
    }

    /* end of blod body */

    .call .containar {
        padding: 2.5rem 0;
    }

    .call h4 {
        width: 90%;
    }

    .call .second {
        display: flex;
    }

    /* end of call */
    .footer .containar {
        padding: 2.5rem 0;
    }

    .footer .row {
        flex-direction: column;
        margin: 0;
        margin-bottom: 2rem;
    }

    .footer_first {
        width: 100%;
        margin-bottom: 2.5rem;
    }

    .footer_first img {
        width: 25%;
        padding: 0;
        margin-bottom: 1rem;
    }

    .footer_first p {
        width: 100%;
    }

    .footer_first .button input {
        width: 29.0625rem;
    }

    .footer_first .button {
        margin-bottom: 1.75rem;
    }

    .footer_carts .tablet_1st {
        display: none;
    }

    .footer_carts .tablet_2nd {
        display: flex;
    }

    .footer_cart {
        width: 30%;
    }

    .footer_cart:not(:last-child) {
        margin-right: 4rem;
    }


}

@media (max-width:873px) {
    .hero_header h1 {
        width: 87%;
    }

    .call h4 {
        width: 91%;
    }
}
/* ... */

